--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -70,7 +70,7 @@ reduceDimensions <- function(x, reduceDimFunction)
 }
 ```
 
-## Classigication Model Generation
+## Classification Model Generation
 Train set was divided between training set and validation set in order to prevent overfitting and to use the train set as support to estimate the generalization error.
 ```{r build_sets, cache=TRUE}
 # Read raw train data set and reduce dimention
@@ -99,13 +99,17 @@ j48_validation <- predict(j48_train, validate_set[,-c(59)])
 cm <- confusionMatrix(j48_validation, validate_set$classe)
 cm
 
-# Generalization error: Mean Squared Error
+# Generalization error: Root Mean Squared Error
+# RMSE: bases on the sum of the squares of the differences between the estimated value
+# and the measured value. The rationale in equation below is the errors are only those
+# cases where the estimated value and the measured value do not match and the square of
+# 1 is 1. For that reason that equation is just adding up without square the sum.
 j48_validation_mse <- sqrt(( sum(validate_set$classe!=j48_validation) )/nrow(validate_set))
 round(j48_validation_mse, digits=4)
 ```
 
 ## Conclusion
-Objective is to correctly infer each one of the records category. The approach followed in this analysis was to considering this as a classification problem. That decision has led this analysis to a classification model which has a generalization error of `r round(j48_validation_mse*100, 2)`% and an Accuracy of `r round(cm$overall['Accuracy']*100, 2)` using 30% of the train samples for the actual model training and 70% as validation set. Those are considered satisfactory results.
+Objective is to correctly infer each one of the records category. The approach followed in this analysis was to considering this as a classification problem. That decision has led this analysis to a classification model which has a generalization error of `r round(j48_validation_mse*100, 2)`% and an Accuracy of `r round(cm$overall['Accuracy']*100, 2)`% using 30% of the train samples for the actual model training and 70% as validation set. Those are considered satisfactory results.
 
 The same decision trees algorithm than [1] was used, however, different results were obtained. In the referred work the authors do not discuss how the data cleaning step was performed. It is assumed differences in that step caused the difference between that work and the analysis results in this document.
 
