--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -36,7 +36,7 @@ train <- read.csv( DATA_RAW_TRAIN )
 # Executive Summary
 C4.5 algorithm is recommended to classify the data processed in this analysis since by using it a classification model can be trained in a reasonable time and the generalization error is relatively low.
 
-# Data Description
+# Overview
 Data set under analysis has the lectures of several accelerometers used to conduct an experiment intended for movement classification: sitting, sitting down, standing, standing up and walking [1]. The provided data set [2] has `r length(train)` domains/variables in total. Presumably, there are raw accelerator measurements for each one of the x, y and z axis, as well as for other devices. The data set has the average, standard deviation, variance, kurtosis and skewness which certainly are correlated with some of the other variables.
 
 The data set is composed of `r nrow(train)` records from which only `r sum(complete.cases(train)==TRUE)` are complete cases; i.e. records where all variables have a defined value. The data set has a variable with consecutive integers which seem to be the record ID.
@@ -98,18 +98,32 @@ Trained model is now tested against the validation set in order to estimate the 
 j48_validation <- predict(j48_train, validate_set[,-c(59)])
 cm <- confusionMatrix(j48_validation, validate_set$classe)
 cm
+```
 
-# Generalization error: Root Mean Squared Error
-# RMSE: bases on the sum of the squares of the differences between the estimated value
-# and the measured value. The rationale in equation below is the errors are only those
-# cases where the estimated value and the measured value do not match and the square of
-# 1 is 1. For that reason that equation is just adding up without square the sum.
-j48_validation_mse <- sqrt(( sum(validate_set$classe!=j48_validation) )/nrow(validate_set))
-round(j48_validation_mse, digits=4)
+## Generalization Error
+### Evaluation Function
+Classifier outcome is the predicted category for the actual sample under evaluation. The correctness of that outcome can be evaluated by following a binary criteria: correctly classified or incorrectly classified. The given training set contains the true classification of each sample in it. Thus it is possible to measure the generalization error (i.e. out sample error) by allocating a portion of the training set for testing the classifier; in this case the allocation portion for that purpose is 70% of the samples in the training set.
+
+An evaluation function is used to collect the error data. That function takes as input the predicted value and the true value. The evaluation function used for the generalization error will evaluate to 0 when the predicted category is equal to the true category and 1 if it is not. In that way the error will be translated to a numeric value that can be used for the generalization error estimation.
+
+### Generalization Error Measurement
+Since the evaluation function will count how many incorrectly classified instances the classifier produces. Averaging that count will show the portion of error that corresponds to each prediction; giving a descriptive number since the measurement will consider the context of the metric(i.e. sample size). Mean Absolute Deviation(MAD) is an the error measurement equation which is close to the intended measurement criteria. MAD is not used to be expressed as percentage but as a real number [4,5]:
+```{r generalization error,cache=TRUE}
+# Evaluation function: Evaluates predicted value (x) vs true value (y)
+#    0 Correctly classified.
+#    1 Incorrectly classified.
+evaluate <- function(x, y)
+{
+    x != y
+}
+
+# Mean Absolute Deviation: Sum of the errors divided by the sample size.
+j48_validation_mad <- sum(evaluate(validate_set$classe, j48_validation))/nrow(validate_set)
+round(j48_validation_mad, digits=4)
 ```
 
 ## Conclusion
-Objective is to correctly infer each one of the records category. The approach followed in this analysis was to considering this as a classification problem. That decision has led this analysis to a classification model which has a generalization error of `r round(j48_validation_mse*100, 2)`% and an Accuracy of `r round(cm$overall['Accuracy']*100, 2)`% using 30% of the train samples for the actual model training and 70% as validation set. Those are considered satisfactory results.
+Objective is to correctly infer each one of the records category. The approach followed in this analysis was to considering this as a classification problem. That decision has led this analysis to a classification model which has a generalization error of `r round(j48_validation_mad, 4)` and an Accuracy of `r round(cm$overall['Accuracy']*100, 2)`% using 30% of the train samples for the actual model training and 70% as validation set. Those are considered satisfactory results.
 
 The same decision trees algorithm than [1] was used, however, different results were obtained. In the referred work the authors do not discuss how the data cleaning step was performed. It is assumed differences in that step caused the difference between that work and the analysis results in this document.
 
@@ -124,8 +138,8 @@ Classification trees seem to be sufficient to achieve the objective of this anal
 
 [3] Salzberg, Steven L. "C4. 5: Programs for machine learning by J. Ross Quinlan. Morgan Kaufmann publishers, inc., 1993." Machine Learning 16.3 (1994): 235-240.
 
+[4] What's the bottom line? How to compare models, duke.edu, 2017/01/29, online:  [https://people.duke.edu/~rnau/compare.htm](https://people.duke.edu/~rnau/compare.htm)
 
-
-
+[5] Measuring Forecast Accuracy: Approaches to Forecasting : A Tutorial, NC State Univeristy, [https://scm.ncsu.edu/scm-articles/article/measuring-forecast-accuracy-approaches-to-forecasting-a-tutorial](https://scm.ncsu.edu/scm-articles/article/measuring-forecast-accuracy-approaches-to-forecasting-a-tutorial)
 
 
